# codeflare-sdk

./: .buildinfo  .cursorrules  .gitignore  .importlinter  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  CodeFlareSDK_Design_Doc.md  Dockerfile  Makefile  OWNERS  README.md  SECURITY.md  carson.yaml  codecov.yml  codeflare-kuberay.code-workspace  codeflare_sdk.common.html  codeflare_sdk.common.kubernetes_cluster.html  codeflare_sdk.common.kueue.html  codeflare_sdk.common.utils.html  codeflare_sdk.common.widgets.html  codeflare_sdk.html  codeflare_sdk.ray.appwrapper.html  codeflare_sdk.ray.client.html  codeflare_sdk.ray.cluster.html  codeflare_sdk.ray.html  codeflare_sdk.ray.rayjobs.html  codeflare_sdk.vendored.html  codeflare_sdk.vendored.python_client.html  codeflare_sdk.vendored.python_client.utils.html  copyscript.sh  genindex.html  go.mod  go.sum  helper.py  index.html  jobtest.yaml  modules.html  objects.inv  py-modindex.html  (+16 more)
.claude/rules/: cluster.md  rayjobs.md  utils.md
.cursor/: hooks.json
.cursor/hooks/: block-dangerous.sh  format-python.sh
.cursor/rules/: 01-project-context.mdc  02-python-standards.mdc  03-testing-and-ci.mdc  04-e2e-byoidc-detection.mdc  05-e2e-validation-workflow.mdc  06-e2e-test-fix-checklist.mdc  07-run-tests-sh-contract.mdc  cluster.mdc  rayjobs.mdc  utils.mdc
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/resources/: minio_remote_config_cell.json  wait_for_job_cell.json
.github/resources-kind/: kind.yaml
.github/workflows/: additional_demo_notebook_tests.yaml  auto-add-issues.yaml  build-test-image.yaml  coverage-badge.yaml  dependabot-labeler.yaml  e2e_tests.yaml  e2e_v2_tests.yaml  guided_notebook_tests.yaml  image-build-and-push.yaml  image.yml  lint.yml  nightly-image-build.yaml  odh-notebooks-sync.yml  pip-audit.yml  pre-commit.yaml  precommit.yaml  publish-documentation.yaml  python-app.yml  rayjob_e2e_tests.yaml  release.yaml  scorecard.yml  snyk-security.yaml  type-check.yml  ui_notebooks_test.yaml  unit-tests.yml  update-versions.yaml
_modules/: index.html
_modules/kube_authkit/: config.html  factory.html
_sources/: codeflare_sdk.common.kubernetes_cluster.rst.txt  codeflare_sdk.common.kueue.rst.txt  codeflare_sdk.common.rst.txt  codeflare_sdk.common.utils.rst.txt  codeflare_sdk.common.widgets.rst.txt  codeflare_sdk.ray.appwrapper.rst.txt  codeflare_sdk.ray.client.rst.txt  codeflare_sdk.ray.cluster.rst.txt  codeflare_sdk.ray.rayjobs.rst.txt  codeflare_sdk.ray.rst.txt  codeflare_sdk.rst.txt  codeflare_sdk.vendored.python_client.rst.txt  codeflare_sdk.vendored.python_client.utils.rst.txt  codeflare_sdk.vendored.rst.txt  modules.rst.txt
_sources/user-docs/: authentication.rst.txt  cluster-configuration.rst.txt  e2e.rst.txt  ray-cluster-interaction.rst.txt  rayjob.rst.txt  s3-compatible-storage.rst.txt  setup-kueue.rst.txt  ui-widgets.rst.txt
_static/: documentation_options.js
codeflare_sdk.egg-info/: SOURCES.txt
codeflare_sdk/cluster/: auth.py  awload.py  cluster.py  config.py
codeflare_sdk/utils/: generate_yaml.py
custom-nb-image/: Dockerfile  VERSION  imagestream.yaml  requirements.txt
custom-nb-image/requirements/: requirements.txt
demo-notebooks/additional-demos/: hf_interactive.ipynb  local_interactive.ipynb  ray_data-scaling.ipynb  ray_job_client.ipynb  remote_ray_job_client.ipynb  requirements.txt
demo-notebooks/additional-interactive/: hf_interactive.ipynb
demo-notebooks/batch-job/: batch_mnist.ipynb  batch_mnist_mcad.ipynb  batch_mnist_ray.ipynb  mnist.py  requirements.txt
demo-notebooks/guided-demos/: 0_basic_ray.ipynb  1_basic_instascale.ipynb  1_cluster_job_client.ipynb  2_basic_interactive.ipynb  2_basic_jobs.ipynb  2_job_client.ipynb  3_basic_interactive.ipynb  3_llama_fine_tune_demo.ipynb  3_pytorch_lightning_demo.ipynb  3_widget_example.ipynb  4_gpt.ipynb  4_rayjob_existing_cluster.ipynb  5_rayjob_lifecycled_cluster.ipynb  5_submit_rayjob_cr.ipynb  6_autoscaling.ipynb  6_rayjob_checkpointing_example.ipynb  6_single_entrypoint.ipynb  autoscaling_load.py  download_mnist_datasets.py  ipywidgets.ipynb  llmfinetune.py  mnist_disconnected.py  mnist_fashion.py  pytorch_lightning.py  requirements-llama.txt  requirements.txt  requirements_gpt.txt  requirements_lightning.txt  train_with_checkpoints.py
demo-notebooks/interactive/: hf_interactive.ipynb  local_hf_interactive.ipynb  local_interactive.ipynb
docs/: SDK_design_doc.md  auth_migration_guide.md  authentication.md  cluster-configuration.md  e2e.md  generate-documentation.md  index.html  ray-cluster-interaction.md  ray_cluster_interaction.md  s3-compatible-storage.md  setup-kueue.md  ui-widgets.md
docs/api/: public-surface.json
docs/cluster/: auth.html  awload.html  cluster.html  config.html  index.html  model.html
docs/designs/: CodeFlare-SDK-design-doc.md
docs/detailed-documentation/: index.html
docs/job/: index.html  jobs.html
docs/sphinx/: conf.py  index.rst
docs/utils/: generate_cert.html  generate_yaml.html  index.html  kube_api_helpers.html  openshift_oauth.html  pretty_print.html
images/tests/: Dockerfile  entrypoint.sh  rbac-test-user-permissions.yaml  run-tests.sh
scripts/migration/: MIGRATION_GUIDE.md  RAY_CLUSTER_MIGRATION_README.md  README.md  ray_cluster_migration.py  ray_cluster_migration_requirements.txt
src/codeflare_sdk/: __init__.py  codeflare.py  conftest.py  test_codeflare.py
src/codeflare_sdk.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: auth-test.crt  cli-test-case.yaml  demo_test.py  func_test.py  test-case-bad.yaml  test-case-cmd.yaml  test-case-custom-image.yaml  test-case-no-kueue-no-aw.yaml  test-case-no-mcad.yamls  test-case-prio.yaml  test-case.yaml  test-default-appwrapper.yaml  test_clusters.py  unit-test-volume-cluster.yaml  unit_test.py  unit_test_support.py
ui-tests/: .gitignore.swp  package.json  playwright.config.js  playwright.config.ts
user-docs/: authentication.html  cluster-configuration.html  e2e.html  ray-cluster-interaction.html  rayjob.html  s3-compatible-storage.html  setup-kueue.html  ui-widgets.html
(+357 files in other folders)
