[tool.poetry]
name = "codeflare-sdk"
version = "0.0.0-dev"
description = "Python SDK for codeflare client"

license = "Apache-2.0"

authors = [
    "Michael Clifford <mcliffor@redhat.com>",
    "Mustafa Eyceoz <meyceoz@redhat.com>",
    "Abhishek Malvankar <asmalvan@us.ibm.com>",
    "Atin Sood <asood@us.ibm.com>",
]

readme = 'README.md'

repository = "https://github.com/project-codeflare/codeflare-sdk"
homepage = "https://github.com/project-codeflare/codeflare-sdk"

keywords = ['codeflare', 'python', 'sdk', 'client', 'batch', 'scale']

[tool.poetry.dependencies]
python = "^3.9"
openshift-client = "1.0.18"
rich = "^12.5"
ray = {version = "2.35.0", extras = ["data", "default"]}
kubernetes = ">= 25.3.0, < 27"
cryptography = "40.0.2"
executing = "1.2.0"
pydantic = "< 2"
ipywidgets = "8.1.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
sphinx-rtd-theme = "2.0.0"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
coverage = "7.2.7"
pytest-mock = "3.11.1"
pytest-timeout = "2.3.1"
jupyterlab = "4.2.5"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
markers = [
    "kind",
    "openshift",
    "nvidia_gpu"
]
addopts = "--timeout=900"
testpaths = ["src/codeflare_sdk"]
collect_ignore = ["src/codeflare_sdk/common/utils/unit_test_support.py"]
