[project]
name = "codeflare-sdk"
version = "0.32.2"

[tool.poetry]
name = "codeflare-sdk"
version = "0.32.2"
description = "Python SDK for codeflare client"

license = "Apache-2.0"

# Exclude vendored tests, examples, and build files from the package
exclude = [
    "src/codeflare_sdk/vendored/python_client_test",
    "src/codeflare_sdk/vendored/examples",
    "src/codeflare_sdk/vendored/pyproject.toml",
    "src/codeflare_sdk/vendored/poetry.lock",
    "src/codeflare_sdk/vendored/README.md"
]

authors = [
    "Michael Clifford <mcliffor@redhat.com>",
    "Mustafa Eyceoz <meyceoz@redhat.com>",
    "Abhishek Malvankar <asmalvan@us.ibm.com>",
    "Atin Sood <asood@us.ibm.com>",
]

readme = 'README.md'

repository = "https://github.com/project-codeflare/codeflare-sdk"
homepage = "https://github.com/project-codeflare/codeflare-sdk"

keywords = ['codeflare', 'python', 'sdk', 'client', 'batch', 'scale']

[tool.poetry.dependencies]
python = "^3.11"
openshift-client = "1.0.18"
rich = ">=12.5,<14.0"
ray = {version = "2.47.1", extras = ["data", "default"]}
kubernetes = ">= 27.2.0"
cryptography = "43.0.3"
executing = "1.2.0"
pydantic = ">= 2.10.6"
ipywidgets = "8.1.2"

[[tool.poetry.source]]
name = "pypi"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/simple/"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "7.4.7"
sphinx-rtd-theme = "3.0.1"

[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
pytest = "7.4.0"
coverage = "7.6.4"
pytest-mock = "3.11.1"
pytest-timeout = "2.3.1"
jupyterlab = "4.3.1"


[tool.poetry.group.dev.dependencies]
diff-cover = "^9.6.0"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::DeprecationWarning:pkg_resources",
    "ignore:pkg_resources is deprecated as an API:DeprecationWarning",
]
markers = [
    "kind",
    "openshift",
    "nvidia_gpu"
]
addopts = "--timeout=900 --ignore=src/codeflare_sdk/vendored"
testpaths = ["src/codeflare_sdk"]
collect_ignore = ["src/codeflare_sdk/common/utils/unit_test_support.py"]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
